adds human readable ds protocols to ds table
(cherry picked from commit 2fbf009a5458c53b2a08b227ef1e1e049c80bf24)

--- a/traffic_portal/app/src/common/modules/table/deliveryServices/table.deliveryServices.tpl.html
+++ b/traffic_portal/app/src/common/modules/table/deliveryServices/table.deliveryServices.tpl.html
@@ -53,7 +53,7 @@ under the License.
                     <td>{{::deliveryService.orgServerFqdn}}</td>
                     <td>{{::deliveryService.active}}</td>
                     <td>{{::deliveryService.type}}</td>
-                    <td>{{::deliveryService.protocol}}</td>
+                    <td>{{::protocol(deliveryService)}}</td>
                     <td>{{::deliveryService.cdnName}}</td>
                     <td>{{::deliveryService.ipv6RoutingEnabled}}</td>
                     <td>{{::deliveryService.dscp}}</td>
