adds human readable ds qstringignore values to ds table
(cherry picked from commit 4b44a2521add9a417076ccc8671d3c66bc550b03)

--- a/traffic_portal/app/src/common/modules/form/tenant/form.tenant.tpl.html
+++ b/traffic_portal/app/src/common/modules/form/tenant/form.tenant.tpl.html
@@ -19,7 +19,7 @@ under the License.
 
 <div class="x_panel">
     <div class="x_title">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb pull-left">
             <li><a ng-click="navigateToPath('/admin/tenants')">Tenants</a></li>
             <li class="active">{{tenantName}}</li>
         </ol>
