--- a/traffic_portal/app/src/common/modules/header/header.tpl.html
+++ b/traffic_portal/app/src/common/modules/header/header.tpl.html
@@ -61,11 +61,11 @@ under the License.
                     </ul>
                 </div>
             </li>
-            <li>
-                <div class="btn-group" title="Download DB">
-                    <button type="button" class="btn btn-link" ng-click="dumpDB()"><i class="fa fa-download"></i></button>
-                </div>
-            </li>
+            <!--<li>-->
+                <!--<div class="btn-group" title="Download DB">-->
+                    <!--<button type="button" class="btn btn-link" ng-click="dumpDB()"><i class="fa fa-download"></i></button>-->
+                <!--</div>-->
+            <!--</li>-->
             <li>
                 <div class="btn-group" title="Queue CDN Server Updates">
                     <button type="button" class="btn btn-link" ng-click="confirmQueueServerUpdates()"><i class="fa fa-flag"></i></button>
