--- a/traffic_portal/app/src/common/modules/table/deliveryServices/table.deliveryServices.tpl.html
+++ b/traffic_portal/app/src/common/modules/table/deliveryServices/table.deliveryServices.tpl.html
@@ -58,7 +58,7 @@ under the License.
                     <td>{{::deliveryService.ipv6RoutingEnabled}}</td>
                     <td>{{::deliveryService.dscp}}</td>
                     <td>{{::deliveryService.signed}}</td>
-                    <td>{{::deliveryService.qstringIgnore}}</td>
+                    <td>{{::qstring(deliveryService)}}</td>
                 </tr>
             </tbody>
         </table>
