enables ssh link on server ip addresses
(cherry picked from commit 6ff795da70dcb2f96abcf7fc5ac16f6499c33ac8)

--- a/traffic_portal/app/src/common/modules/table/cacheGroupServers/table.cacheGroupServers.tpl.html
+++ b/traffic_portal/app/src/common/modules/table/cacheGroupServers/table.cacheGroupServers.tpl.html
@@ -70,7 +70,7 @@ under the License.
                 <td>{{::server.cachegroup}}</td>
                 <td>{{::server.type}}</td>
                 <td>{{::server.physLocation}}</td>
-                <td>{{::server.ipAddress}}</td>
+                <td><a ng-click="ssh(server.ipAddress, $event)">{{::server.ipAddress}}</a></td>
                 <td>{{::server.ip6Address}}</td>
                 <td>
                     <span ng-if="!isOffline(server.status)">{{::server.status}}</span>
