--- a/traffic_portal/app/src/common/modules/table/statusServers/table.statusServers.tpl.html
+++ b/traffic_portal/app/src/common/modules/table/statusServers/table.statusServers.tpl.html
@@ -54,7 +54,7 @@ under the License.
                 </td>
                 <td>{{::server.hostName}}</td>
                 <td>{{::server.domainName}}</td>
-                <td>{{::server.ipAddress}}</td>
+                <td><a ng-click="ssh(server.ipAddress, $event)">{{::server.ipAddress}}</a></td>
                 <td>{{::server.ip6Address}}</td>
                 <td>
                     <span ng-show="!isOffline(server.status)">{{::server.status}}</span>
