adds a table to view all deliveryservices for a given tenant
(cherry picked from commit f8f3892581f82196b0d310042cb2a05050c06ca4)

--- a/traffic_portal/app/src/common/modules/form/tenant/form.tenant.tpl.html
+++ b/traffic_portal/app/src/common/modules/form/tenant/form.tenant.tpl.html
@@ -25,6 +25,7 @@ under the License.
         </ol>
         <div class="pull-right" role="group" ng-show="!settings.isNew">
             <button class="btn btn-primary" title="View Users" ng-click="viewUsers()">View Users</button>
+            <button class="btn btn-primary" title="View Delivery Services" ng-click="viewDSs()">View Delivery Services</button>
         </div>
         <div class="clearfix"></div>
     </div>
