--- a/traffic_portal/app/src/common/modules/form/user/form.user.tpl.html
+++ b/traffic_portal/app/src/common/modules/form/user/form.user.tpl.html
@@ -70,11 +70,12 @@ under the License.
                 </div>
             </div>
             <div class="form-group" ng-class="{'has-error': hasError(userForm.tenantId), 'has-feedback': hasError(userForm.tenantId)}">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12">Tenant</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12">Tenant *</label>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <select id="tenantId" name="tenantId" class="form-control" ng-model="user.tenantId" ng-options="tenant.id as tenant.name for tenant in tenants">
+                    <select name="tenantId" class="form-control" ng-model="user.tenantId" ng-options="tenant.id as tenant.name for tenant in tenants" required>
                         <option value="">Select...</option>
                     </select>
+                    <small class="input-error" ng-show="hasPropertyError(userForm.tenantId, 'required')">Required</small>
                 </div>
             </div>
             <div class="form-group" ng-class="{'has-error': hasError(userForm.password), 'has-feedback': hasError(userForm.password)}">
