--- a/traffic_portal/app/src/common/modules/table/userDeliveryServices/table.userDeliveryServices.tpl.html
+++ b/traffic_portal/app/src/common/modules/table/userDeliveryServices/table.userDeliveryServices.tpl.html
@@ -25,7 +25,7 @@ under the License.
             <li class="active">Delivery Services</li>
         </ol>
         <div class="pull-right">
-            <button class="btn btn-primary" title="Link Delivery Services to User" ng-click="selectDSs()"><i class="fa fa-link"></i></button>
+            <button class="btn btn-primary" title="Link Delivery Services to User" ng-if="useTenancy == '0'" ng-click="selectDSs()"><i class="fa fa-link"></i></button>
             <button class="btn btn-default" title="Refresh" ng-click="refresh()"><i class="fa fa-refresh"></i></button>
         </div>
         <div class="clearfix"></div>
@@ -39,7 +39,7 @@ under the License.
                 <th>xmlId</th>
                 <th>orgServerFqdn</th>
                 <th>cdn</th>
-                <th></th>
+                <th ng-if="useTenancy == '0'"></th>
             </tr>
             </thead>
             <tbody>
@@ -48,7 +48,7 @@ under the License.
                 <td>{{::deliveryService.xmlId}}</td>
                 <td>{{::deliveryService.orgServerFqdn}}</td>
                 <td>{{::deliveryService.cdnName}}</td>
-                <td><button type="button" class="btn btn-link" title="Unlink Delivery Service from User" ng-click="removeDS(deliveryService.id)"><i class="fa fa-chain-broken"></i></button></td>
+                <td ng-if="useTenancy == '0'"><button type="button" class="btn btn-link" title="Unlink Delivery Service from User" ng-click="removeDS(deliveryService.id)"><i class="fa fa-chain-broken"></i></button></td>
             </tr>
             </tbody>
         </table>
